增加多任务情况下，存在的共享问题

--- a/userDataSyn/WebRoot/WEB-INF/classes/config/jdbc.properties
+++ b/userDataSyn/WebRoot/WEB-INF/classes/config/jdbc.properties
@@ -48,10 +48,13 @@ jdbc.password=2019@Bill
 jdbc.zl.url=jdbc:mysql://136.160.153.108:8010/billuser
 jdbc.zl.username=bill
 jdbc.zl.password=2019@Bill
+#jdbc.zl.password=f38b2806996621352df387e16ecdb622
 
 jdbc.ord.url=jdbc:mysql://136.160.153.108:8010/intfuser
 jdbc.ord.username=intf
 jdbc.ord.password=2019@Intf
+#jdbc.ord.password=85686bc53085b99b3986013345e577e6
+
 #producOffer
 #jdbc.zl.url=jdbc:mysql://10.1.234.70:8869/billdb
 #jdbc.zl.username=comm
