--- a/cfg/config/jdbc.properties
+++ b/cfg/config/jdbc.properties
@@ -33,6 +33,10 @@ jdbc.acct.url=jdbc:mysql://136.160.161.218:8901/account?useUnicode=true&characte
 jdbc.acct.username=account
 jdbc.acct.password=4156c9641856e039ee44e86ed492e57a
 
+jdbc.billdetail.url=jdbc:mysql://136.160.161.218:8909/billdetail?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false
+jdbc.billdetail.username=billdetail
+jdbc.billdetail.password=ea59338cea8de265019685f346b6833b
+
 acquireIncrement=15
 maxIdleTime=300
 initialPoolSize=3
