将prod_inst_sub中的stats_cd的值修改为100000。

--- a/cfg/config/sysConfig.properties
+++ b/cfg/config/sysConfig.properties
@@ -52,3 +52,4 @@ mq.jh.NamesrvAuthID=bss-acct
 mq.jh.NamesrvAuthPwd=4b22f15938fb6f6cecdb04ecc1d59154
 
 bon3.servInfo.url = http://136.160.161.224:8092/billing/acct/std/searchServInfo
+plca.otherremind=http://136.160.161.224:8070/plca-service/IOUniEventSend/otherremind
